--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
-    display: inline-flex;
+    display: flex;
     height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
