--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -15,7 +15,7 @@
     margin-right: 32px;
 }
 
-.img{
+.leftimg{
     width: 380px;
     height: 570px;
 }
@@ -107,7 +107,7 @@ button{
     display: flex;
     font-size: 14px;
     font-weight: bold;
-    padding: 7px 16px!important;
+    padding: 7px 16px;
     text-align: center;
     margin: 0px 40px;
     align-items: stretch;
@@ -163,7 +163,7 @@ label{
     color: black;
 }
 
-input{
+.input-login{
     text-align: left;
     background: rgb(250,250,250);
     border: 0;
@@ -176,9 +176,9 @@ input{
     font-size: 13px;
 }
 
-span{
+.comment{
     font-weight: 400;
-    margin: 12px!important;
+    margin: 12px;
     color: #8E8E8E;
     font-size: 12px;
     text-align: center;
@@ -191,7 +191,7 @@ span{
     font-weight: bold;
 }
 
-a{
+.app img{
     text-decoration: none;
     color: rgb(0, 149, 246);
     font-weight: bold;
