--- a/src/pages/Main/Body/Body.css
+++ b/src/pages/Main/Body/Body.css
@@ -6,13 +6,19 @@
     align-items: center;
     flex-direction: column;
     margin-top: 15px;
+    overflow-y: auto hidden;
+    /*display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;*/
 }
 
-.contents-div{
+.post-div{
     width: 470px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 30px;
 }
 
-.contents-top{
+.post-top{
     width: 470px;
     height: 56px;
     margin: 16px 4px 0px 5px;
@@ -22,14 +28,14 @@
     flex-direction: row;
 }
 
-.contents-top-img{
+.writer-img{
     width: 32px;
     height: 32px;
     align-items: center;
     display: flex;
 }
 
-.contents-top-div{
+.post-top-div{
     width: 380px;
     height: 40px;
     margin-left: 15px;
@@ -37,14 +43,14 @@
     align-items: center;
 }
 
-.contents-top-id{
+.post-top-id{
     color: rgb(38,38,38);
     font-size: 14px;
     text-decoration: none;    
     font-weight: 600;
 }
 
-.contents-top-time{
+.post-top-time{
     color: rgb(115,115,115);
     font-size: 14px;
     font-weight: 400;
@@ -52,7 +58,7 @@
     padding-left: 15px;
 }
 
-.contents-top-etc{
+.post-top-etc{
     width: 40px;
     height: 40px;
     font-size: 5px;
@@ -60,4 +66,45 @@
     align-items: center;
     display: flex;    
     font-weight: 100;
+}
+
+.writer-img{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    border: 1px solid #bebebe;
+}
+
+.post-image {
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+}
+
+.post-caption {
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.post-act{
+    width: 24px;
+    height: 24px;
+    padding: 8px;
+}
+
+.comment{    
+    font-size: 14px;
+    color: #000;
+    text-align: left;    
+    margin-left: 0px;
+    padding-left: 0px;
+}
+
+.comment-input{
+    width: 100%;
+    color: #000;
+}
+
+.comment-input-div{
+    margin-top: 20px;
 }
