--- a/src/pages/Signin/Signin.css
+++ b/src/pages/Signin/Signin.css
@@ -59,7 +59,7 @@ h2{
     text-align: center;
 }
 
-button{
+.signin-button{
     background-color: rgb(0, 149, 246);
     border: none;
     border-radius: 8px;
@@ -68,7 +68,7 @@ button{
     display: flex;
     font-size: 14px;
     font-weight: bold;
-    padding: 7px 16px!important;
+    padding: 7px 16px;
     text-align: center;
     margin: 8px 40px;
     align-items: stretch;
@@ -138,7 +138,7 @@ input{
     font-size: 13px;
 }
 
-span{
+.etc-text {
     font-weight: 400;
     margin: 0!important;
     color: #8E8E8E;
