react-router-dom

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .AppContainer{
     display: flex;
     justify-content: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-use-select: none;
+    user-select: none;
 }
