--- a/src/pages/Main/Profile/Profile.css
+++ b/src/pages/Main/Profile/Profile.css
@@ -3,6 +3,10 @@
     height: 100vh;
     margin-top: 15px;
     overflow-y: auto hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-use-select: none;
+    user-select: none;
 }
 
 .profile-header{
