--- a/src/pages/Main/Left/Left.css
+++ b/src/pages/Main/Left/Left.css
@@ -5,6 +5,10 @@
     width: 245px;
     height: 100%;
     margin: 10px 0 0 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-use-select: none;
+    user-select: none;
 }
 
 .Container-box{
