--- a/src/pages/Main/Search/Search.css
+++ b/src/pages/Main/Search/Search.css
@@ -4,6 +4,10 @@
     margin-top: 15px;
     display: flex;
     flex-direction: column;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-use-select: none;
+    user-select: none;
 }
 
 .div-top{
