--- a/src/pages/Main/Body/Body.css
+++ b/src/pages/Main/Body/Body.css
@@ -7,6 +7,10 @@
     flex-direction: column;
     margin-top: 15px;
     overflow-y: auto hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-use-select: none;
+    user-select: none;
 }
 
 .post-div{
