--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -148,6 +148,11 @@ button{
     position: relative;
     border: 1px solid rgb(219,219,219);
     margin-bottom: 10px;
+    
+    border: 0;
+    font-size: 100%;
+    height: 36px;
+    color: black;
 }
 
 label{
@@ -174,6 +179,7 @@ label{
     padding: 9px 0 7px 8px;
     font: inherit;
     font-size: 13px;
+
 }
 
 .comment{
@@ -182,6 +188,7 @@ label{
     color: #8E8E8E;
     font-size: 12px;
     text-align: center;
+    margin-left: 30px;
 }
 
 .facebook{
